# amen

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  config.py  goal.yaml  planfile.yaml  pyproject.toml  pyqual.yaml  requirements.txt  run.sh
.code2llm_cache/: Makefile_1780755568355196027_7781.pkl  _common_1780755175625802172_3024.pkl  _verify_1780755175839804589_4982.pkl  _verify_1780755565608165512_5142.pkl  contract_verify_1780755565163160569_7557.pkl  expectations_1780755177469822993_3539.pkl  goal_1780754872450340895_12383.pkl  pipeline_1780755183617892395_8828.pkl  planfile_1780754884007803798_28207.pkl  planfile_1780755557914080033_28951.pkl  pyproject_1780754909564801854_2418.pkl  run_1780755182301877541_326.pkl  run_1780755182368878297_1463.pkl  runner_1780755180210817193_23191.pkl  schema_1780755177945828367_4874.pkl  testql_scenario_1780755177094139724_2102.pkl
.pyqual/: ruff.json
.testql-auto/: auto-report.json  inspection.json  inspection.toon.yaml  inspection.yaml  metadata.json  refactor-plan.json  refactor-plan.toon.yaml  refactor-plan.yaml  result.json  result.toon.yaml  result.yaml  summary.md  topology.json  topology.toon.yaml  topology.yaml
ai_gateway/: __init__.py  feedback_loop.py  gateway.py  model_catalog.py
cli/: colors.py  dispatch.py  main.py  shell.py  shell_interactive.py  shell_output.py
docs/: INTENT_DSL_SPEC.md  README.md
dsl/: schema.py
examples/: README.md  _bootstrap_deps.sh  _common.sh  _verify.sh  run-all.sh  run-e2e.sh  run-resilience.sh  run-stacks.sh  user-api.intent.yaml  user-api.prompt
examples/01-user-api/: README.md  run.sh
examples/02-ping-smoke/: README.md  prompt.txt  run.sh
examples/03-flask-api/: README.md  prompt.txt
examples/04-express-api/: README.md  prompt.txt
examples/05-ir-show/: README.md  prompt.txt  run.sh
examples/06-iterate-workflow/: README.md  prompt.txt  run.sh
examples/07-execution-smoke/: README.md  prompt.txt  run.sh
examples/08-llm-generate/: README.md  prompt.txt  run.sh
examples/09-e2e-ping-verify/: README.md  expectations.yaml  prompt.txt  run.sh
examples/09-e2e-ping-verify/tests/: service.testql.toon.yaml
examples/10-e2e-user-crud-verify/: README.md  expectations.yaml  prompt.txt  run.sh
examples/10-e2e-user-crud-verify/tests/: service.testql.toon.yaml
examples/11-e2e-express-verify/: README.md  expectations.yaml  prompt.txt
examples/12-e2e-full-gate/: README.md  expectations.yaml  prompt.txt  run.sh
examples/17-stack-shop-gateway/: README.md  iterun.yaml  prompt.txt  run.sh
examples/18-stack-blog/: README.md  iterun.yaml  prompt.txt  run.sh
examples/19-stack-api-cache/: README.md  iterun.yaml  prompt.txt  run.sh
examples/_scripts/: annotate_intract.py  intent_to_intract.py  intent_to_openapi.py  intent_to_testql.py  verify_expectations.py
executor/: __init__.py  runner.py
generator/: __init__.py  contract_verify.py  expectations.py  intent_generator.py  intract_manifest.py  pipeline.py  results.py  session.py  testql_scenario.py
integrations/: markpact_pack.py  pactown_runtime.py
integrations/adapters/: docker.py  filesystem.py
integrations/bridges/: pipeline.py
interfaces/: service.py
ir/: __init__.py  models.py
parser/: __init__.py  dsl_parser.py
planner/: __init__.py  simulator.py  stack_artifacts.py  stack_planner.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
registry/: discover.py  discover_context.py
tests/: conftest.py
tests/e2e/: test_ai_gateway.py  test_contract_verify.py  test_expectations.py  test_intent_generator.py  test_intract_manifest.py  test_pipeline_repair.py  test_shell.py  test_stack_planner.py  test_testql_scenario.py  test_web.py
web/: app.py
web/templates/: index.html
(+2 files in other folders)
