[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amen"
version = "0.1.0"
description = "DSL-based intent execution system with iterative refinement"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Softreck", email = "info@softreck.dev"}
]
keywords = ["dsl", "intent", "automation", "docker", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "anyio>=4.0.0",
]

[project.scripts]
intent-cli = "cli.main:main"

[project.urls]
Homepage = "https://github.com/softreck/amen"
Documentation = "https://github.com/softreck/amen#readme"
Repository = "https://github.com/softreck/amen"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["ir*", "parser*", "planner*", "executor*", "cli*", "web*"]
