[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iterun"
version = "0.1.6"
description = "DSL-based intent execution system with iterative refinement, featuring AI-powered suggestions via Ollama, safe simulation, and automatic health validation."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Softreck", email = "tom@sapletta.com"}
]
keywords = ["dsl", "intent", "automation", "docker", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
test = [
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
ai = [
    "litellm>=1.0.0",
]
mcp = [
    "litellm>=1.0.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "anyio>=4.0.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.uv]
default-groups = ["test"]

[project.scripts]
iterun = "cli.main:main"
iterun-mcp = "mcp.server:main"

[project.urls]
Homepage = "https://github.com/softreck/iterun"
Documentation = "https://github.com/softreck/iterun#readme"
Repository = "https://github.com/softreck/iterun"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["ir*", "parser*", "planner*", "executor*", "cli*", "web*", "dsl*", "generator*", "sdk*", "mcp*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
